# mail2print

./: .gitignore  LICENSE  README.md  config.json.example  file_print.py  imap_mail.py  logging_module.py  mail2print.py  pyproject.toml  requirements.txt
