[tool.poetry]
name = "mail2print"
version = "0.1.0"
description = ""
authors = ["trasba <t.rasbach@gmx.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mail2print = "mail2print:main"